# GameBooster-Manager

./: CMakeLists.txt  README.md  TurAtlas.sln  TurAtlas.vcxproj  TurAtlas.vcxproj.filters  games.json  main.cpp  memory_manager.cpp  process_manager.cpp  process_manager.h  utils.cpp  utils.h
.github/workflows/: codeql.yml
core/: memory_manager.cpp  process_manager.cpp  system_cleaner.cpp
header/: GameOptimizer.h  SystemCleaner.h  memory_manager.h  process_manager.h  utils.h
utils/: GameOptimizer.cpp  utils.cpp
